fix header alignment

--- a/default-styles.css
+++ b/default-styles.css
@@ -57,7 +57,7 @@ mark {
   background-color: rgba(255, 255, 255, 0.5);
   left: 0px;
   top: 0px;
-  width: calc(100vw - 60px);
+  width: calc(100vw - 69px);
   height: 85px;
   padding-left: 25px;
   margin: 20px;
@@ -70,7 +70,7 @@ mark {
 
 .bfLogo {
   position: fixed;
-  right: 28px;
+  right: 37px;
   top: 37px;
   width: 55px;
   height: 55px;
